sumo/tests/netgen/grid/errors/grid_length__zero/options.netgen
--grid --grid.number=10 --grid.length=0 --output-file=net.net.xml
